--- a/AmbChat/app/src/main/res/values/colors.xml
+++ b/AmbChat/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="Xam">#929894</color>
+    <color name="ColorFriengMess">#FFF5B7DC</color>
+    <color name="ColorMyMess">#7e97ec</color>
 </resources>
