--- a/AmbChat/app/src/main/res/layout/chat_dashboard.xml
+++ b/AmbChat/app/src/main/res/layout/chat_dashboard.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,136 +8,99 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#7e97ec"
+        android:background="@color/colorPrimaryDark"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imgAvatarUserChat"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="2"
+            android:layout_gravity="center|left"
+            android:scaleType="centerInside"
             android:src="@drawable/baseline_person_white_36" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txtNameUserChat"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="Tên Người Chat"
-                android:textColor="@android:color/white"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/txtTimeUserChat"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="Hoạt động 3 giờ trước"
-                android:textColor="@android:color/white"
-                android:textSize="24sp" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imgPhoneUserChat"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:src="@drawable/baseline_call_black_18dp"
-
-            />
-
-        <ImageView
-            android:id="@+id/imgVideoCallUserChat"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:src="@drawable/baseline_videocam_black_18dp" />
+        <TextView
+            android:id="@+id/txtNameUserChat"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|left"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/margin"
+            android:text="@string/FriendName"
+            android:textAppearance="@style/textLarge"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_weight="8"
+        android:layout_weight="8">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:background="#ec90d7"
+            android:layout_marginTop="@dimen/margin"
+            android:background="@color/ColorFriengMess"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgUserChatReceive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
                 android:scaleType="centerCrop"
                 android:src="@drawable/baseline_person_white_36" />
 
             <TextView
                 android:id="@+id/txtUserChatReceive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_weight="9"
-                android:gravity="left"
-                android:text="tin nhắn nhận nhiều lắm nè ahihi "
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginRight="@dimen/margin"
+                android:gravity="center|left"
+                android:text="@string/MessLast"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textAppearance="@style/textLarge" />
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:background="#7e97ec"
+            android:layout_marginTop="@dimen/margin"
+            android:background="@color/ColorMyMess"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtUserChatSend"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_weight="9"
-                android:gravity="left"
-                android:text="tin nhắn gửi nhiều lắm nè ahihi "
-                android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginRight="@dimen/margin"
+                android:gravity="right"
+                android:layout_toLeftOf="@id/imgUserChatSend"
+                android:text="@string/MessLast"
+                android:textAppearance="@style/textLarge"
+                android:textColor="@android:color/black" />
 
             <ImageView
                 android:id="@+id/imgUserChatSend"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/baseline_person_white_36" />
 
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -173,7 +135,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="3"
-            android:hint="Abc" />
+            android:hint="Abc"
+            android:textAppearance="@style/textSmall"/>
 
         <ImageView
             android:id="@+id/imgSend"
