--- a/AmbChat/app/src/main/res/layout/list_friend_items.xml
+++ b/AmbChat/app/src/main/res/layout/list_friend_items.xml
@@ -19,8 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/user_single_image"
-        android:layout_marginStart="20dp"
-        android:layout_toEndOf="@+id/user_single_image"
+        android:layout_marginStart="@dimen/margin"
+        android:layout_toEndOf="@id/user_single_image"
         android:text="Display Name"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
