--- a/AmbChat/app/src/main/res/values/style.xml
+++ b/AmbChat/app/src/main/res/values/style.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="textSmall" parent="@android:style/TextAppearance.Small"></style>
     <style name="textMedium" parent="@android:style/TextAppearance.Medium"></style>
     <style name="textLarge" parent="@android:style/TextAppearance.Large"></style>
 
