--- a/AmbChat/app/src/main/res/layout/fragment_main.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_main.xml
@@ -9,11 +9,19 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
+
+        <android.support.design.widget.NavigationView
+            android:layout_width="55dp"
+            android:layout_height="30dp" />
 
         <include
             android:id="@+id/main_page_toolbar"
             layout="@layout/app_bar_layout" />
+
 
         <android.support.design.widget.TabLayout
             android:id="@+id/main_tabs"
