--- a/AmbChat/app/src/main/res/layout/list_chat_items.xml
+++ b/AmbChat/app/src/main/res/layout/list_chat_items.xml
@@ -1,18 +1,7 @@
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
-
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_marginBottom="@dimen/margin"
-    android:layout_marginTop="@dimen/margin"
-    android:layout_weight="8"
-    android:orientation="horizontal">
-
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="93dp"
@@ -77,27 +66,4 @@ android:orientation="vertical">
             android:text="Tin nhan cuoi"
             android:textSize="20sp" />
     </RelativeLayout>
-</LinearLayout>
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/imgListFriend1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/baseline_supervisor_account_black_18dp" />
-
-    <ImageView
-        android:id="@+id/imgListMess1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/baseline_message_black_18dp" />
-
-</LinearLayout>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
