--- a/AmbChat/app/src/main/res/layout/list_mess.xml
+++ b/AmbChat/app/src/main/res/layout/list_mess.xml
@@ -35,7 +35,7 @@
             android:hint="@string/Search"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-             />
+            />
 
     </LinearLayout>
     <!--android:textAppearance="@style/textSmall"-->
@@ -57,15 +57,16 @@
 
             <ImageView
                 android:id="@+id/imgFriend"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:scaleType="center"
+                android:layout_weight="0.5"
+                android:scaleType="fitCenter"
                 android:src="@drawable/baseline_person_pin_black_18dp" />
 
             <TextView
                 android:id="@+id/txtNameFr"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin"
                 android:layout_marginRight="@dimen/margin"
@@ -74,6 +75,25 @@
                 android:textAppearance="@style/textMedium"
                 android:textColor="@android:color/black" />
 
+            <ImageView
+                android:id="@+id/imgPhoneFr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/padding_username"
+                android:layout_weight="0.5"
+                android:src="@drawable/baseline_call_black_18dp"
+
+                />
+
+            <ImageView
+                android:id="@+id/imgVideoCallFr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="0.5"
+                android:src="@drawable/baseline_videocam_black_18dp" />
         </LinearLayout>
     </LinearLayout>
 
