--- a/AmbChat/app/src/main/res/layout/fragment_chats.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_chats.xml
@@ -37,7 +37,6 @@
             android:id="@+id/btnSearchFr"
             android:layout_width="16dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1.5"
             android:gravity="center"
             android:hint="@string/Search"
@@ -49,8 +48,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/margin"
-        android:layout_marginTop="@dimen/margin"
+        android:layout_marginTop="@dimen/margin0"
         android:layout_weight="8.3"
         android:orientation="horizontal">
 
@@ -58,67 +56,45 @@
             android:layout_width="match_parent"
             android:layout_height="93dp"
             android:layout_marginBottom="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
             android:background="@color/white"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgFriend"
-                android:layout_width="79dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center"
-                android:layout_marginStart="14dp"
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginStart="@dimen/margin"
                 android:scaleType="fitCenter"
-                android:src="@drawable/baseline_person_pin_black_18dp"
-                android:layout_marginLeft="14dp"
-                android:layout_alignParentLeft="true" />
+                android:src="@drawable/baseline_person_pin_black_18dp" />
 
             <TextView
                 android:id="@+id/txtNameFr"
-                android:layout_width="137dp"
-                android:layout_height="35dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/imgFriend"
-                android:layout_toRightOf="@+id/imgFriend"
+                android:layout_toEndOf="@id/imgFriend"
+                android:layout_toRightOf="@id/imgFriend"
                 android:text="@string/nameFriendChat"
-                android:textAppearance="@style/textMedium"
+                android:gravity="left"
+                android:layout_marginTop="@dimen/margin"
+                android:textAppearance="@style/textLarge"
                 android:textColor="@android:color/black" />
-
-            <ImageView
-                android:id="@+id/imgPhoneFr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:layout_marginEnd="83dp"
-                android:layout_marginRight="83dp"
-                android:src="@drawable/baseline_call_black_18dp" />
-
-            <ImageView
-                android:id="@+id/imgVideoCallFr"
-                android:layout_width="75dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/baseline_videocam_black_18dp" />
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="134dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="24dp"
-                android:layout_toEndOf="@+id/imgFriend"
-                android:text="Tin nhan cuoi"
-                android:textSize="20sp" />
+                android:layout_toEndOf="@id/imgFriend"
+                android:text="@string/tin_nhan_cuoi"
+                android:textAppearance="@style/textLarge"
+                android:layout_toRightOf="@id/imgFriend"
+                android:layout_marginBottom="@dimen/margin"/>
         </RelativeLayout>
     </LinearLayout>
 
