--- a/AmbChat/app/src/main/res/layout/fragment_friends.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_friends.xml
@@ -9,7 +9,7 @@
 
     <!--android:divider="@android:color/transparent": xoa ke ngang-->
     <ListView
-        android:id="@android:id/list"
+       android:id="@+id/lvFriends"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"></ListView>
