--- a/AmbChat/app/src/main/res/layout/content_main2.xml
+++ b/AmbChat/app/src/main/res/layout/content_main2.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MainFragment">
-
-
-
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".activities.Main2Activity"
+    tools:showIn="@layout/app_bar_main3">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -15,12 +14,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true">
-
-
-        <include
-            android:id="@+id/main_page_toolbar"
-            layout="@layout/app_bar_main" />
-
 
         <android.support.design.widget.TabLayout
             android:id="@+id/main_tabs"
@@ -36,13 +29,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/appBarLayout">
-
         <fragment
             android:id="@+id/fragment1"
             android:name="com.ambientdigitalgroup.ambchat.fragments.FriendsFragment"
             android:layout_width="0px"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-
     </android.support.v4.view.ViewPager>
 </RelativeLayout>
