--- a/AmbChat/app/src/main/res/layout/list_friend_items.xml
+++ b/AmbChat/app/src/main/res/layout/list_friend_items.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:paddingTop="10dp"
+
     android:background="?android:selectableItemBackground">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -41,6 +42,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="100dp"
         android:layout_marginTop="33dp"
-        android:text="User default Status" />
+        android:text="User default Status"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp" />
 
 </RelativeLayout>
