--- a/AmbChat/app/src/main/res/values/colors.xml
+++ b/AmbChat/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="Xam">#929894</color>
     <color name="ColorFriengMess">#FFF5B7DC</color>
     <color name="ColorMyMess">#7e97ec</color>
+    <color name="colorMess">#444444</color>
 </resources>
