--- a/AmbChat/app/src/main/res/layout/fragment_main.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,12 @@
     tools:context=".fragments.MainFragment">
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFF"
+        android:translationZ="-10dp"
+        tools:targetApi="lollipop" />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
