--- a/AmbChat/app/src/main/res/layout/fragment_chats.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_chats.xml
@@ -12,112 +12,11 @@
     android:orientation="vertical"
     tools:context=".fragments.ChatsFragment">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="27dp"
-        android:layout_weight="0.7"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"/>
 
-        <ImageView
-            android:id="@+id/imgIconSearchFr"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="0.5"
-            android:src="@drawable/baseline_search_black_18dp" />
 
-        <EditText
-            android:id="@+id/edtSearchFr"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:hint="@string/searchMess" />
-
-        <Button
-            android:id="@+id/btnSearchFr"
-            android:layout_width="16dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:hint="@string/Search"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin0"
-        android:layout_weight="8.3"
-        android:orientation="horizontal">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="93dp"
-            android:layout_marginBottom="@dimen/margin"
-            android:background="@color/white"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgFriend"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/margin"
-                android:layout_marginStart="@dimen/margin"
-                android:scaleType="fitCenter"
-                android:src="@drawable/baseline_person_pin_black_18dp" />
-
-            <TextView
-                android:id="@+id/txtNameFr"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@id/imgFriend"
-                android:layout_toRightOf="@id/imgFriend"
-                android:text="@string/nameFriendChat"
-                android:gravity="left"
-                android:layout_marginTop="@dimen/margin"
-                android:textAppearance="@style/textLarge"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_toEndOf="@id/imgFriend"
-                android:text="@string/tin_nhan_cuoi"
-                android:textAppearance="@style/textLarge"
-                android:layout_toRightOf="@id/imgFriend"
-                android:layout_marginBottom="@dimen/margin"/>
-        </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgListFriend1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/baseline_supervisor_account_black_18dp" />
-
-        <ImageView
-            android:id="@+id/imgListMess1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/baseline_message_black_18dp" />
-
-    </LinearLayout>
 
 </LinearLayout>
