--- a/AmbChat/app/src/main/res/values/dimens.xml
+++ b/AmbChat/app/src/main/res/values/dimens.xml
@@ -12,5 +12,8 @@
     <dimen name="padding_username">7dp</dimen>
     <dimen name="textSize">16sp</dimen>
     <dimen name="imageSize">36dp</dimen>
+    <dimen name="button_left" />
+    <dimen name="button_start" />
+    <dimen name="button_right" />
 
 </resources>
